[gd_scene load_steps=6 format=3 uid="uid://y7v240wsbor3"]

[ext_resource type="Script" path="res://Scripts/pond.gd" id="1_uqfm0"]
[ext_resource type="Texture2D" uid="uid://d2whey1idm3j6" path="res://Assets/pond4.png" id="2_nrvnf"]
[ext_resource type="Texture2D" uid="uid://ctsul74q7mbyq" path="res://Assets/pond3.png" id="3_7nule"]
[ext_resource type="Texture2D" uid="uid://cmsyiimtxer8y" path="res://Assets/pond1.png" id="4_2pv0y"]
[ext_resource type="Texture2D" uid="uid://djye0khtxw17i" path="res://Assets/pond2.png" id="5_73h3y"]

[node name="Pond" type="Node2D"]
script = ExtResource("1_uqfm0")

[node name="Pond1" type="Node2D" parent="."]
process_mode = 4
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Pond1"]
texture_filter = 2
position = Vector2(2, -3)
scale = Vector2(0.165714, 0.165714)
texture = ExtResource("2_nrvnf")

[node name="Area2D" type="Area2D" parent="Pond1"]
z_index = -100
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pond1/Area2D"]
polygon = PackedVector2Array(-46, 9, -27, -1, -34, -4, -34, -12, -35, -24, -7, -27, 22, -27, 31, -20, 49, -18, 48, -12, 39, -11, 53, 1, 49, 15, 46, 20, 31, 18, 16, 24, -24, 24, -46, 17)

[node name="Pond2" type="Node2D" parent="."]
process_mode = 4
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Pond2"]
texture_filter = 2
position = Vector2(-3.99998, -3.99997)
scale = Vector2(0.162856, 0.162856)
texture = ExtResource("3_7nule")

[node name="Area2D" type="Area2D" parent="Pond2"]
z_index = -100
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pond2/Area2D"]
position = Vector2(-2, 2)
polygon = PackedVector2Array(-37, 18, -11, 19, 34, 18, 42, 6, 34, 0, 47, -16, 46, -31, 12, -35, -12, -25, -19, -35, -36, -30, -36, -26, -46, -17, -39, -10, -16, -11, -51, 4, -51, 14)

[node name="Pond3" type="Node2D" parent="."]
process_mode = 4
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Pond3"]
texture_filter = 2
position = Vector2(-2, -5)
scale = Vector2(0.175715, 0.175715)
texture = ExtResource("4_2pv0y")

[node name="Area2D" type="Area2D" parent="Pond3"]
z_index = -100
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pond3/Area2D"]
position = Vector2(0, 1)
polygon = PackedVector2Array(-16, 12, -33, 5, -37, 1, -60, -6, -58, -14, -44, -20, -22, -19, -19, -29, -3, -32, 44, -30, 44, -20, 41, -17, 53, -10, 52, 1, 32, 6, 26, 17, -7, 18)

[node name="Pond4" type="Node2D" parent="."]
process_mode = 4
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Pond4"]
texture_filter = 2
position = Vector2(3.00001, -6)
scale = Vector2(0.167678, 0.167678)
texture = ExtResource("5_73h3y")

[node name="Area2D" type="Area2D" parent="Pond4"]
z_index = -100
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pond4/Area2D"]
position = Vector2(1, 1)
polygon = PackedVector2Array(-36, 5, -50, -7, -35, -21, -25, -23, -10, -33, 38, -32, 38, -25, 52, -15, 50, -5, 45, -1, 46, 12, 37, 15, 15, 14, 7, 19, -7, 19, -15, 16, -30, 13)
